# pips

./: CMakeLists.txt  package.xml
cfg/: HallucinatedRobotModel.cfg  RobotModel.cfg
include/: collision_checker.h  cylindrical_model.h  cylindrical_model_t.h  hallucinated_robot_model.h  hallucinated_robot_model_interface.h  rectangular_model.h
include/pips/collision_testing/: collision_checker.h  collision_checking_options.h  collision_checking_result.h  depth_image_collision_checker.h  general_collision_checker.h  hallucinated_robot_model_interface.h  pips_collision_checker.h  transforming_collision_checker.h
include/pips/collision_testing/geometry_models/: box.h  cylinder.h  ellipsoid.h  generic_models.h  geometry_models.h  sphere.h
include/pips/collision_testing/image_geometry_models/: box.h  cylinder.h  image_geometry_converter.h
include/pips/collision_testing/robot_models/: box_model.h  column_type.h  composite_model.h  cylindrical_model.h  cylindrical_model_t.h  cylindrical_model_t_vect.h  hallucinated_robot_model.h  rectangular_model.h  rectangular_model_ocl.h  rectangular_model_pf.h  rectangular_model_ss.h  rectangular_model_vect.h  robot_model.h
include/pips/utils/: abstract_camera_model.h  depth_camera_model.h  duration_accumulator.h  image_comparison_implementations.h  image_comparison_result.h  param_utils.h  pinhole_camera_model.h  pose_conversions.h
include/tf2_utils/: transform_manager.h
launch/: draw_points.launch  test_collision.launch  test_trajectory.launch  visualize.launch
matlab/: cylinder_test.m
src/: approach_benchmarker.cpp  box_model.cpp  collision_checker.cpp  composite_model.cpp  cylindrical_model.cpp  cylindrical_model_t.cpp  cylindrical_model_t_vect.cpp  dense_model.cpp  depth_image_collision_checker.cpp  draw_frames.cpp  hallucinated_robot_model_interface.cpp  omp_benchmarker.cpp  param_utils.cpp  pips_collision_checker.cpp  rectangular_model.cpp  rectangular_model_ocl.cpp  rectangular_model_pf.cpp  rectangular_model_ss.cpp  rectangular_model_vect.cpp  robot_model.cpp  test_trajectory.cpp
srv/: TestCollision.srv
