<?xml version="1.0"?>
<package>
  <name>pips</name>
  <version>0.0.0</version>
  <description>The pips package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jssmith@gatech.edu">Justin Smith</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
<!--  <build_depend>image_view</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
<!--  <build_depend>extended_local</build_depend> -->
<!--  <build_depend>dense_depth_projection</build_depend> -->
  
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
<!--  <run_depend>image_view</run_depend> -->
  <run_depend>tf</run_depend>
<run_depend>tf2</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
<!--  <run_depend>extended_local</run_depend> -->
<!--  <run_depend>dense_depth_projection</run_depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
